syntax = "proto3";
option java_multiple_files = true;
package org.xapik.ploy.engine;

service EngineService {
    rpc GetProcess(GetProcessRequest) returns (GetProcessResponse) {}
    rpc StartProcess(StartProcessRequest) returns (StartProcessResponse) {}
}

message StartProcessRequest {
    map<string, string> inputs = 1;
    string processName = 2;
}

message StartProcessResponse {
    string process_id = 1;
}

message GetProcessRequest {
    string processId = 1;
}

message GetProcessResponse {
    string id = 1;
    string status = 2;
    string outputs = 3;
}
